--- a/ImageAnalyzer/config.json
+++ b/ImageAnalyzer/config.json
@@ -7,6 +7,7 @@
       "attributes": [
         {
           "name": "age_group",
+          "pattern_index": 0,
           "column_number": 1,
           "position": 2,
           "cardinality": 8,
@@ -24,6 +25,7 @@
         },
         {
           "name": "gender",
+          "pattern_index": 1,
           "cardinality": 2,
           "position": 1,
           "column_number": 2,
@@ -35,6 +37,7 @@
         },
         {
           "name": "race",
+          "pattern_index": 2,
           "cardinality": 4,
           "column_number": 3,
           "ordered": false,
