--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Portfolio",
-  "name": "My GitHub Portfolio",
+  "short_name": "Chameleon",
+  "name": "Chameleon",
   "icons": [
     {
       "src": "favicon.ico",
