--- a/ImageAnalyzer/config.json
+++ b/ImageAnalyzer/config.json
@@ -53,8 +53,8 @@
     },
     {
       "name": "feretdb",
-      "prompt_prefix": "",
-      "prompt_suffix": "portrait looking face looking into camera",
+      "prompt_prefix": "natural looking headshot of a",
+      "prompt_suffix": "looking into camera",
       "attributes": [
         {
           "name": "gender",
@@ -80,7 +80,34 @@
             "1": "black",
             "2": "asian",
             "3": "hispanic",
-            "4": "asian middle eastern"
+            "4": "middle eastern"
+          }
+        }
+      ]
+    },
+    {
+      "name": "animals",
+      "prompt_prefix": "an image of a ",
+      "prompt_suffix": "in wild",
+      "attributes": [
+        {
+          "name": "animal",
+          "pattern_index": 0,
+          "cardinality": 10,
+          "position": 0,
+          "column_number": 1,
+          "ordered": false,
+          "mapping": {
+            "0": "butterfly",
+            "1": "cat",
+            "2": "chicken",
+            "3": "cow",
+            "4": "dog",
+            "5": "elephant",
+            "6": "horse",
+            "7": "sheep",
+            "8": "spider",
+            "9": "squirrel"
           }
         }
       ]
