--- a/ImageAnalyzer/Dockerfile
+++ b/ImageAnalyzer/Dockerfile
@@ -1,5 +1,9 @@
 FROM tiangolo/uvicorn-gunicorn-fastapi:python3.10
 
+
+RUN apt-get update && \
+    apt-get install -y docker.io
+
 WORKDIR /app
 COPY ./requirements.txt /app/requirements.txt
 
